// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog组件 快照测试 不显示遮罩层 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    className="sc-AxhUy bgoGKd sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb fkPdMh sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 基本使用 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy bgoGKd sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb fkPdMh sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 宽度自适应 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy doOZgu sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb fkPdMh sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 对话框将根据maxWidth的值进行自我调整 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy fXWTBE sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb fkPdMh sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 显示关闭图标 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy bgoGKd sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb bpVhOc sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-Axmtr kWUQPd sinoui-icon-button sc-fzozJi cfAFtJ sinoui-dialog-title__icon"
        color="textSecondary"
        role="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-AxmLO evtFQU sinoui-svg-icon"
          fill="currentColor"
          focusable="false"
          height={24}
          role="presentation"
          size={24}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 设置全屏显示 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy fNAKwc sinoui-dialog--draggable"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb fkPdMh sinoui-dialog-title"
      color="textPrimary"
      draggable={true}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;

exports[`Dialog组件 快照测试 设置弹窗不可以拖拽 1`] = `
<div
  className="sc-AxirZ jCTmlg sc-fzoLsD Tqcoi"
  draggable={false}
  onClick={[Function]}
>
  <div
    aria-hidden={true}
    className="sc-AxjAm emWxSE sinoui-modal--backdrop"
    data-testid="Backdrop"
    onClick={[Function]}
  />
  <div
    className="sc-AxhUy bgoGKd"
  >
    <h6
      className="sc-AxiKw bKjaHr sinoui-typography sinoui-typography--h6 sc-AxhCb bEHJJY sinoui-dialog-title"
      color="textPrimary"
      draggable={false}
      type="h6"
    >
      Use Google location service?
    </h6>
    <h6
      className="sc-AxiKw eMvaxK sinoui-typography sinoui-typography--subtitle1 sc-fzpans hxlBTd sinoui-dialog-content children theme"
      color="textSecondary"
      type="subtitle1"
    >
      Let Google help apps determine location. This means sending anonymous location data toGoogle, even when no apps are running.
    </h6>
    <div
      className="sc-fzplWN jvGVho sinoui-dialog-actions"
    >
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Disagree
      </button>
      <button
        className="sc-AxheI hqGAlx sinoui-base-button sc-fznyAO eMlDcb sinoui-button"
        color="primary"
        role="button"
        type="button"
      >
        Agree
      </button>
    </div>
    <iframe
      className="sc-AxgMl eOOySL"
      frameBorder={0}
      scrolling="false"
    />
  </div>
</div>
`;
